--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --aot",
     "build": "ng build --prod --aot",
-    "test": "ng test",
+    "test": "ng test --browsers ChromeHeadless --watch=false",
     "lint": "ng lint angular-starter",
     "e2e": "ng e2e",
     "prettier": "pretty-quick --staged"
