--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier",
-      "pre-push": "npm run lint && npm run test"
+      "pre-commit": "npm run prettier"
     }
   },
   "private": true,
