--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
       - run: npm run build
       - name: List output files
         run: ls
+      - run: cd dist/
+      - run: ls
+      - run: cd angular/starter
+      - run: ls
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@3.0.0
         with:
