--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Publish Website
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+name: Build and Publish Front End Framework Website
 on:
   push:
     branches: [master]
@@ -22,11 +19,9 @@ jobs:
       - run: npm ci
       - run: npm run build
       - name: List output files
-        run: ls
-      - run: cd dist/
-      - run: ls
-      - run: cd angular/starter
-      - run: ls
+        run: |
+          npm install
+          npm run build --if-present
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@3.0.0
         with:
