--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,11 @@ jobs:
       - run: npm run build
       - name: List output files
         run: |
-          npm install
-          npm run build --if-present
+          ls
+          cd dist/
+          ls
+          cd angular-starter/
+          ls
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@3.0.0
         with:
