--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "ng build --prod --aot",
     "test": "ng test --browsers ChromeHeadless --watch=false",
     "lint": "ng lint angular-starter",
+    "lint:fix": "ng lint angular-starter --fix",
     "e2e": "ng e2e",
     "prettier": "pretty-quick --staged"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier"
+      "pre-commit": "npm run prettier",
+      "pre-push": "npm run lint && npm run test"
     }
   },
   "private": true,
