updated renovate json

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,6 @@
   "major": {
     "automerge": false
   },
-  "requiredStatusChecks": null
+  "requiredStatusChecks": null,
+  "baseBranches": ["dev"]
 }
