--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,6 @@
     "automerge": false
   },
   "requiredStatusChecks": null,
-  "baseBranches": ["dev"]
+  "baseBranches": ["dev"],
+  "ignoreDeps": ["@angular-devkit/build-angular"]
 }
