--- a/package.json
+++ b/package.json
@@ -19,35 +19,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.7",
+    "@angular/animations": "9.1.0",
     "@angular/cdk": "9.2.0",
-    "@angular/common": "9.0.7",
+    "@angular/common": "9.1.0",
     "@angular/compiler": "9.1.0",
     "@angular/core": "9.1.0",
     "@angular/forms": "9.1.0",
     "@angular/material": "9.2.0",
-    "@angular/material-moment-adapter": "^9.2.0",
+    "@angular/material-moment-adapter": "9.2.0",
     "@angular/platform-browser": "9.1.0",
     "@angular/platform-browser-dynamic": "9.1.0",
     "@angular/router": "9.1.0",
-    "foundation-sites": "6.6.1",
-    "moment": "^2.24.0",
+    "eva-css": "^0.1.3",
+    "moment": "2.24.0",
     "rxjs": "6.5.4",
     "tslib": "1.11.1",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.901.0",
+    "@angular-devkit/build-angular": "0.900.7",
     "@angular/cli": "9.1.0",
     "@angular/compiler-cli": "9.1.0",
     "@angular/language-service": "9.1.0",
     "@types/jasmine": "3.5.10",
     "@types/jasminewd2": "2.0.8",
-    "@types/node": "13.9.4",
-    "codelyzer": "5.2.1",
+    "@types/node": "13.9.5",
+    "codelyzer": "5.2.2",
     "husky": "4.2.3",
     "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "4.2.1",
+    "jasmine-spec-reporter": "5.0.1",
     "karma": "4.4.1",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "2.1.1",
