--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/platform-browser": "9.1.0",
     "@angular/platform-browser-dynamic": "9.1.0",
     "@angular/router": "9.1.0",
-    "eva-css": "^0.1.3",
+    "eva-css": "0.1.5",
     "moment": "2.24.0",
     "rxjs": "6.5.4",
     "tslib": "1.11.1",
